--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
       <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
       <h1>Git & GitHub Crash Course!</h1>
     </header>
-    <main>
-      <p>Because the basics are important! New changes 1</p>
-      <p>
-        Learn more about GIT in the
-        <a href="https://git-scm.com/book/en/v2">official docs</a> or
-        <a href="https://acad.link/git">our course</a>.
-      </p>
-    </main>
+    <section>
+      <main>
+        <p>Because the basics are important! New changes 1</p>
+        <p>
+          Learn more about GIT in the
+          <a href="https://git-scm.com/book/en/v2">official docs</a> or
+          <a href="https://acad.link/git">our course</a>.
+        </p>
+      </main>
+    </section>
   </body>
 </html>
